--- a/action.yml
+++ b/action.yml
@@ -8,12 +8,17 @@ tabs:
     WORKER_SLOTS:
       type: TEXT
       name: Number of concurrent slots per worker
+      default: "2"
+      required: true
     MAX_SLOTS:
       type: TEXT
       name: Number of maximum concurrent slots for all workers
+      required: true
     MIN_FREE_SLOTS:
       type: TEXT
       name: Minimum number of free concurrent slots
+      default: "1"
+      required: true
   Aws:
     AWS:
       type: AWS_INTEGRATION
