--- a/action.yml
+++ b/action.yml
@@ -25,11 +25,11 @@ tabs:
     AWS_REGION:
       type: TEXT
       name: AWS region
-      default: "us-east"
+      default: us-east
     AWS_AZ:
       type: TEXT
       name: AWS availability zone
-      default: "us-east-1"
+      default: us-east-1
     INSTANCE_PRIVATE_KEY:
       type: TEXTAREA
       name: Private ssh key to connect to worker instance
@@ -40,11 +40,11 @@ tabs:
     INSTANCE_TYPE:
       type: TEXT
       name: Instance type
-      default: "t3.medium"
+      default: t3.medium
     INSTANCE_AMI_ID:
       type: TEXT
       name: Instance machine image (ami)
-      default: "ami-08c40ec9ead489470"
+      default: ami-08c40ec9ead489470
     INSTANCE_VOLUME_SIZE:
       type: TEXT
       name: Instance disk size (GB)
@@ -63,8 +63,9 @@ tabs:
     STANDALONE_TOKEN:
       type: TEXT
       name: Buddy On-Premises worker token
-docker_image_name: 'hashicorp/terraform'
-docker_image_tag: 'latest'
+docker_image_name: hashicorp/terraform
+docker_image_tag: latest
+entrypoint: /bin/sh
 execute_commands:
   - ls
   - pwd
