--- a/action.yml
+++ b/action.yml
@@ -63,9 +63,14 @@ tabs:
     STANDALONE_TOKEN:
       type: TEXT
       name: Buddy On-Premises worker token
-docker_image_name: hashicorp/terraform
+docker_image_name: ubuntu
 docker_image_tag: latest
 entrypoint: /bin/sh
+output:
+  variables:
+    WORKERS:
+      example: 2
+      info: Number of workers
 execute_commands:
   - ls
   - pwd
