--- a/action.yml
+++ b/action.yml
@@ -69,6 +69,7 @@ docker_image_name: buddy/workers-scale
 docker_image_tag: latest
 volume_mappings:
   - .terraform:/buddy/.terraform
+working_directory: /buddy
 output:
   variables:
     WORKERS:
