--- a/action.yml
+++ b/action.yml
@@ -33,7 +33,8 @@ tabs:
     BACKEND_BUCKET:
       type: TEXT
       name: Bucket for Terraform state
-      default: workers
+      default: buddy-workers
+      info: Bucket must exist
     BACKEND_KEY:
       type: TEXT
       name: Path in bucket for terraform state
