--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,7 @@ docker_image_name: buddy/workers-scale
 docker_image_tag: latest
 working_directory: /buddy
 execute_commands:
-  - ./calc.sh
+  - . calc.sh
 output:
   variables:
     WORKERS:
