--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,7 @@ inputs:
   MAX_SLOTS:
     type: TEXT
     name: Number of maximum concurrent slots for all workers
-    required: true
+    default: "$BUDDY_WORKERS_CONCURRENT_SLOTS"
   MIN_FREE_SLOTS:
     type: TEXT
     name: Minimum number of free concurrent slots
