--- a/action.yml
+++ b/action.yml
@@ -1,21 +1,22 @@
 name: Workers_Scale
-inputs:
-  WORKER_TAG:
-    type: TEXT
-    name: Worker tag
-    info: Leave empty for no tag
-  WORKER_SLOTS:
-    type: TEXT
-    name: Number of concurrent slots per worker
-    default: "2"
-  MAX_WORKERS:
-    type: TEXT
-    name: Number of maximum workers
-    info: Leave empty to calculate value from concurrent slots in license
-  MIN_FREE_SLOTS:
-    type: TEXT
-    name: Minimum number of free concurrent slots
-    default: "1"
+tabs:
+  Scale:
+    WORKER_TAG:
+      type: TEXT
+      name: Worker tag
+      info: Leave empty for no tag
+    WORKER_SLOTS:
+      type: TEXT
+      name: Number of concurrent slots per worker
+      default: "2"
+    MAX_WORKERS:
+      type: TEXT
+      name: Number of maximum workers
+      info: Leave empty to calculate value from concurrent slots in license
+    MIN_FREE_SLOTS:
+      type: TEXT
+      name: Minimum number of free concurrent slots
+      default: "1"
 docker_image_name: buddy/workers-scale
 docker_image_tag: latest
 working_directory: /buddy
