max workers instead of max slots

--- a/action.yml
+++ b/action.yml
@@ -1,22 +1,21 @@
 name: Workers_Scale
-tabs:
-  Scale:
-    WORKER_TAG:
-      type: TEXT
-      name: Worker tag
-      info: Leave empty for no tag
-    WORKER_SLOTS:
-      type: TEXT
-      name: Number of concurrent slots per worker
-      default: "2"
-    MAX_WORKERS:
-      type: TEXT
-      name: Number of maximum workers
-      info: Leave empty to calculate value from concurrent slots in license
-    MIN_FREE_SLOTS:
-      type: TEXT
-      name: Minimum number of free concurrent slots
-      default: "1"
+inputs:
+  WORKER_TAG2:
+    type: TEXT
+    name: Worker tag
+    info: Leave empty for no tag
+  WORKER_SLOTS2:
+    type: TEXT
+    name: Number of concurrent slots per worker
+    default: "2"
+  MAX_WORKERS2:
+    type: TEXT
+    name: Number of maximum workers
+    info: Leave empty to calculate value from concurrent slots in license
+  MIN_FREE_SLOTS2:
+    type: TEXT
+    name: Minimum number of free concurrent slots
+    default: "1"
 docker_image_name: buddy/workers-scale
 docker_image_tag: latest
 working_directory: /buddy
